--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "chromedriver": "^96.0.0",
     "nightwatch": "^1.7.13",
     "serve-handler": "^6.1.3"
+  },
+  "dependencies": {
+    "vue": "^3.2.30"
   }
 }
